# money-track

./: .env.prod  .env.prod.example  .gitignore  AGENTS.md  CLAUDE.md  PAPERCUTS.md  README.md  compose.dev.yml  conventions.md  docker-compose.prod.yml  docker-compose.yml  idea.md  n8n_wf_analysis.md  package-lock.json  package.json  pending_issues.md  temp.md  upsert_transaction.sql  vision.md
backend_new/: .env.example  AGENTS.MD  Dockerfile  GUARDRAILS.md  README.md  backend_migration_consolidated_report.md  piccolo_conf.py  pyproject.toml
backend_new/app/: main.py
backend_new/app/api/: router.py
backend_new/app/core/: config.py  exceptions.py  logging.py  tracing.py
backend_new/app/db/: engine.py  piccolo_app.py  queries.py
backend_new/app/models/: __init__.py  tables.py
backend_new/app/schemas/: analytics.py  responses.py  transactions.py
backend_new/app/services/: auth.py  category_suggestion.py  sms_parser.py  telegram_callback_data.py  telegram_ingestion.py  telegram_runtime.py  transaction_category_actions.py  transaction_normalization.py
backend_new/piccolo_migrations/: db_2026_02_21t22_05_00_000001.py  db_2026_07_17t00_00_00_000001.py  db_2026_07_19t15_30_00_000001.py
backend_new/scripts/: compare_schema_parity.py  run_integration_capture.py  run_integration_dual_mode.py
backend_new/tests/: AGENTS.md  test_category_suggestion.py  test_logging_redaction.py  test_telegram_callback_data.py  test_telegram_ingestion.py  test_telegram_runtime.py  test_telegram_webhook.py
backend_new/tests/fixtures/: __init__.py  db_helpers.py
docs/: idea.md  (+7 more)
(+304 files in other folders)
