[project]
name = "money-track-backend-new"
version = "0.1.0"
description = "Python backend migration target for Money Track"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "piccolo>=1.24.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "openai>=2.29.0,<3.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pydantic-settings>=2.10.0,<3.0.0",
  "python-telegram-bot>=22.5,<23.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0,<9.0.0",
  "mypy>=1.17.0,<2.0.0",
  "ruff>=0.12.0,<1.0.0",
  "rapidfuzz>=3.14.3,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "tests", "scripts", "piccolo_migrations", "piccolo_conf.py"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["piccolo_migrations/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["asyncpg", "piccolo", "piccolo.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
